first version mobile fix

--- a/tia/css/style.css
+++ b/tia/css/style.css
@@ -1,14 +1,14 @@
 
 body {
        font-family: 'Merriweather','Oswald', sans-serif;
-       font-size: 30px;
+         font-size: 1.5vw;
 }
 
 #banner{
   width:70%;
 }
 #bannerDiv{
-  width:100%;
+  width:100vw;
   text-align: center;
   background-color: black;
   margin-bottom:60px;
